# scripts

./: Cargo.toml  flake.nix
src/: main.rs
