[package]
name = "scripts"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.47", features = ["cargo", "derive", "env"] }
color-eyre = "0.6.5"
dirs = "6.0.0"
notify-rust = { version = "4.11.7", features = ["images"] }
regex = "1.11.2"
swayipc = "3.0.3"
wl-clipboard-rs = "0.9.2"
